# testgl

./: CMakeLists.txt  Jenkinsfile  main.cc  proj.cc  test.py
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeLists.txt
